--- a/Assets/_Root/package.json
+++ b/Assets/_Root/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "com.demo.packagename",
-  "displayName": "Package Name",
-  "description": "Package Description",
+  "name": "com.system-community.stringtools",
+  "displayName": "String Tools",
+  "description": "Microsoft.NET.StringTools",
   "version": "1.0.0",
   "unity": "2019.1",
-  "category": "pancake",
+  "category": "system",
   "author": {
     "name": "yenmoc",
     "email": "phongsoyenmoc.diep@gmail.com",
@@ -16,10 +16,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:pancake-llc/packagename.git",
-    "directory": "Package Name"
+    "url": "git@github.com:system-community/StringTools.git",
+    "directory": "String Tools"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@pancake-llc"
+    "registry": "https://npm.pkg.github.com/@system-community"
   }
 }
